# partition

./: .gitignore  Cargo.toml  README.md  diesel.sh  diesel.toml  docker-compose.yml  openapi.sh
docs/: MIDDLEWARE_EXAMPLE.md  openapi.yml
examples/: index_test.rs  upload_file.rs
libraries/server-lib/: Cargo.toml  README.md
libraries/server-lib/.openapi-generator/: FILES
libraries/server-lib/api/: openapi.yaml
libraries/server-lib/docs/: Informations.md  Playlist.md  Song.md  default_api.md
libraries/server-lib/examples/client/: main.rs
libraries/server-lib/examples/server/: main.rs  server.rs
libraries/server-lib/src/: context.rs  lib.rs  models.rs
libraries/server-lib/src/client/: mod.rs
libraries/server-lib/src/server/: mod.rs
migrations/: mysql.toml  postgres.toml
migrations/mysql/2022-09-10-101713_setup/: down.sql  up.sql
migrations/postgres/2022-09-10-101713_setup/: up.sql
resources/: logger.yml  sample.toml
resources/ui/: index.html
src/: config.rs  index.rs  main.rs
src/database/: mod.rs  model.rs  schema.rs
src/server/: headers.rs  mdc.rs  metric.rs  mod.rs  router.rs  ui.rs
src/server/endpoints/: api_endpoint.rs  metrics_endpoint.rs  mod.rs  openapi_endpoint.rs
tests/: api.rs  ui.rs
tests-resources/: config.toml  logger.yml
tests/common/: mod.rs
tests/features/api/: api.feature
tests/features/ui/: ui.feature
ui/: package.json
