[package]
name = "partition-server"
authors = ["Dalvany"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "libraries/server-lib",
]

[features]
default = ["mysql", "postgres"]
postgres = ["diesel/postgres"]
mysql = ["diesel/mysql"]

[[test]]
name = "ui"
harness = false

[[test]]
name = "api"
harness = false

[dependencies]

# Openapi
async-trait = "0.1"
server-lib = { path = "libraries/server-lib" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.26", features = ["full"] }
futures = "0.3"
swagger = "6.2"
okapi = "0.4"

# Indexing
tantivy = "0.19"
tantivy-analysis-contrib = "0.7"

# Files
audiotags = "0.4"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
base64 = "0.21"

# Relational BDD
diesel = { version = "2.0", features = ["extras"] }
diesel_migrations = "2.0"

# Logging
log = "0.4"
log4rs = "1.2"
log-mdc = "0.1"

# Metrics
metrics = "0.20"
metrics-exporter-prometheus = { version = "0.11", default-features = false }
function-timer = "0.4"

# Config
clap = { version = "4.1", features = ["derive"] }
toml = "0.7"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
md5 = "0.7"

[dev-dependencies]
cucumber = "0.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
